--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
+  },
+  "scripts": {
+    "start": "nodemon server/server.js"
   }
 }
