--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "my-electron-app",
+  "version": "0.1.0",
+  "author": "wlcks311",
+  "description": "My Electron app",
+  "main": "main.js",
+
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
