--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "author": "wlcks311",
   "description": "My Electron app",
   "main": "main.js",
+  "homepage": ".",
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
   },
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "electron .",
     "deploy": "electron-builder --windows nsis:ia32"
   },
   "build": {
@@ -41,6 +42,7 @@
     }
   },
   "devDependencies": {
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "electron": "7.0.0"
   }
 }
