--- a/exeResult/builder-debug.yml
+++ b/exeResult/builder-debug.yml
@@ -88,8 +88,8 @@ nsis:
     !macroend
 
     !addplugindir /x86-unicode "C:\Users\wlcks\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
-    !include "C:\Users\wlcks\AppData\Local\Temp\t-9Liprk\0-messages.nsh"
-    !include "C:\Users\wlcks\AppData\Local\Temp\t-9Liprk\1-messages.nsh"
+    !include "C:\Users\wlcks\AppData\Local\Temp\t-EThjsh\0-messages.nsh"
+    !include "C:\Users\wlcks\AppData\Local\Temp\t-EThjsh\1-messages.nsh"
 
     Var newStartMenuLink
     Var oldStartMenuLink
