--- a/exeResult/builder-debug.yml
+++ b/exeResult/builder-debug.yml
@@ -88,8 +88,8 @@ nsis:
     !macroend
 
     !addplugindir /x86-unicode "C:\Users\wlcks\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
-    !include "C:\Users\wlcks\AppData\Local\Temp\t-cNZ4dg\0-messages.nsh"
-    !include "C:\Users\wlcks\AppData\Local\Temp\t-cNZ4dg\1-messages.nsh"
+    !include "C:\Users\wlcks\AppData\Local\Temp\t-RFbCyZ\0-messages.nsh"
+    !include "C:\Users\wlcks\AppData\Local\Temp\t-RFbCyZ\1-messages.nsh"
 
     Var newStartMenuLink
     Var oldStartMenuLink
