--- a/exeResult/builder-debug.yml
+++ b/exeResult/builder-debug.yml
@@ -87,9 +87,9 @@ nsis:
       !insertmacro MUI_LANGUAGE "Vietnamese"
     !macroend
 
+    !include "C:\Users\wlcks\AppData\Local\Temp\t-M5VHk3\0-messages.nsh"
+    !include "C:\Users\wlcks\AppData\Local\Temp\t-M5VHk3\1-messages.nsh"
     !addplugindir /x86-unicode "C:\Users\wlcks\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
-    !include "C:\Users\wlcks\AppData\Local\Temp\t-RFbCyZ\0-messages.nsh"
-    !include "C:\Users\wlcks\AppData\Local\Temp\t-RFbCyZ\1-messages.nsh"
 
     Var newStartMenuLink
     Var oldStartMenuLink
